syntax = "proto3";
package mjconfig;

message Mjconfig{
    bool hsz = 1;
    uint64 Gold = 2;
}

message DoNothing{

}

// 消息处理器
service ConfigHandler {
    rpc GetMjConfig(DoNothing) returns (Mjconfig) {}
}
